--- a/views/hello.handlebars
+++ b/views/hello.handlebars
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+	<h1>Presenting: {{userName}}</h1>
 	<div class="container">
 		<div class="jumbotron">
 			<h1>Hello, {{name}}!</h1>
